[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/enemies/spikefiend.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/spikefiendsprite.png" type="Texture" id=2]
[ext_resource path="res://Scripts/enemies/sfsprite.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "death"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sfsprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sfsprite:anim_col")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 589 ]
}

[sub_resource type="Animation" id=2]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("sfsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.7, 1.8, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 576, 577, 578, 579, 580, 581, 582, 583, 584, 585, 586, 587, 588, 589, 817, 818, 819 ]
}

[sub_resource type="Animation" id=3]
resource_name = "gethit"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sfsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 288, 289, 290, 291, 292, 293, 294, 295 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sfsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("sfsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 432, 433, 434, 435, 436, 437, 438, 439, 440, 441, 442, 443, 444, 445, 446, 447 ]
}

[sub_resource type="Animation" id=6]
length = 1.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sfsprite:anim_col")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161 ]
}

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 2

[sub_resource type="CylinderMesh" id=8]
top_radius = 0.4
bottom_radius = 1.4
radial_segments = 6
rings = 2

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 1, 0, 0, 1 )
roughness = 0.0
emission_enabled = true
emission = Color( 1, 0.723816, 0.292969, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderShape" id=10]
radius = 63.4719
height = 30.0

[sub_resource type="CylinderShape" id=11]
radius = 33.3229
height = 30.0

[sub_resource type="ParticlesMaterial" id=12]
emission_shape = 1
emission_sphere_radius = 2.0
gravity = Vector3( 0, 9.8, 0 )
initial_velocity = 1.0
angular_velocity = 7.84727e-044
radial_accel = 2.0
radial_accel_random = 1.0
scale = 6.0
scale_random = 0.2

[sub_resource type="SpatialMaterial" id=13]
flags_transparent = true
params_depth_draw_mode = 3
albedo_color = Color( 0.427451, 0, 0, 0.705882 )
roughness = 0.8

[sub_resource type="SphereMesh" id=14]
material = SubResource( 13 )
radius = 0.1
height = 0.5
radial_segments = 6
rings = 3

[sub_resource type="CapsuleShape" id=15]
radius = 2.46271
height = 7.49773

[sub_resource type="BoxShape" id=16]
extents = Vector3( 1, 0.01, 1 )

[node name="spikefiend" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )
FLASH_TIME = 0.1
FIRE_TIME = 0.8
MOVE_SPEED = 4
MAX_SPEED = 4
damage = 5
P_DAMAGE = 5
enemy_health = 300
MAX_ENEMY_HEALTH = 300
TURRET_DAMAGE_BULLET = 20
TURRET_DAMAGE_RAYCAST = 5

[node name="anim" type="AnimationPlayer" parent="." groups=[
"ghosts",
]]
autoplay = "idle"
anims/death = SubResource( 1 )
anims/die = SubResource( 2 )
anims/gethit = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/shoot = SubResource( 5 )
anims/walk = SubResource( 6 )

[node name="sfsprite" type="Sprite3D" parent="." groups=[
"ghosts",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0 )
material_override = SubResource( 7 )
pixel_size = 0.1
texture = ExtResource( 2 )
vframes = 40
hframes = 18
script = ExtResource( 3 )

[node name="Flash_2" type="MeshInstance" parent="."]
transform = Transform( 0.6, 0, 0, 0, -2.62268e-008, -0.6, 0, 0.6, -2.62268e-008, 0, 4.40941, 0.16621 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Flash" type="MeshInstance" parent="."]
transform = Transform( 0.6, 0, 0, 0, -2.62268e-008, -0.6, 0, 0.6, -2.62268e-008, 0, 5.44807, -0.21019 )
mesh = SubResource( 8 )
material/0 = SubResource( 9 )

[node name="Ray_Cast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.10698, -3.18493 )
cast_to = Vector3( 0, 0, -40 )

[node name="Chase_Area" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="Chase_Area"]
shape = SubResource( 10 )

[node name="Vision_Area" type="Area" parent="."]
collision_layer = 2

[node name="Collision_Shape" type="CollisionShape" parent="Vision_Area"]
shape = SubResource( 11 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.75254, -2.97461 )

[node name="Barrel_End" type="Spatial" parent="Head"]
transform = Transform( -1, 0, -1.50996e-007, 0, 1, 0, 1.50996e-007, 0, -1, 0, 2.22162, -3.1352 )

[node name="Smoke" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85465, 0.50817 )
emitting = false
amount = 64
lifetime = 1.4
visibility_aabb = AABB( -3.64419, -2.44026, -2.50963, 7.57765, 16.6094, 7.38895 )
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 14 )

[node name="clshape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 0, 5, 0 )
shape = SubResource( 15 )

[node name="fall" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.677074, 0 )
shape = SubResource( 16 )

